--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Katalog Rzemieślników RP Sagan</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="assets/img/logo.png" type="image/png">
+</head>
 <body>
-<h1>Cwelownia Saganowska</h1>
-<p>Bazarek Cechmistrzów</p>
+    <div class="logo-container">
+        <img src="assets/img/logo.png" alt="logo" class="logo-image">
+        <span class="logo-text">Bazarek Sagan</span>
+    </div>
+
+    <h1 class="main-title">Katalog Cechmistrzów</h1>
+
+    <section class="main-grid">
+        <a href="kowal.html" class="main-card">
+            <img src="assets/img/kowal.png" alt="Kowal">
+            <div class="overlay">Kowal</div>
+        </a>
+        <a href="platnerz.html" class="main-card">
+            <img src="assets/img/platnerz.png" alt="Płatnerz">
+            <div class="overlay">Płatnerz</div>
+        </a>
+        <a href="krawiec.html" class="main-card">
+            <img src="assets/img/krawiec.png" alt="Krawiec">
+            <div class="overlay">Krawiec</div>
+        </a>
+        <a href="ciesla.html" class="main-card">
+            <img src="assets/img/ciesla.png" alt="Cieśla">
+            <div class="overlay">Cieśla</div>
+        </a>
+    </section>
 </body>
 </html>
