--- a/index.html
+++ b/index.html
@@ -1,37 +1,71 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katalog Rzemieślników RP Sagan</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="assets/img/logo.png" type="image/png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Katalog Rzemieślników RP Sagan</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="assets/img/logo.png" type="image/png">
 </head>
 <body>
-    <div class="logo-container">
-        <img src="assets/img/logo.png" alt="logo" class="logo-image">
-        <span class="logo-text">Bazarek Sagan</span>
+  <div class="logo-container">
+    <div class="logo-line">
+      <img src="assets/img/logo.png" alt="logo" class="logo-image">
+      <span class="logo-text">Od Sagan studio</span>
     </div>
+    <div class="logo-line">
+      <img src="assets/img/msciciel.png" alt="sigma" class="logo-image">
+      <span class="logo-text">Podjebane od sigmy Msciciel </span>
+    </div>
+    <div class="logo-line">
+      <img src="assets/img/gpt.png" alt="syzyf" class="logo-image">
+      <span class="logo-text">Robione przez Gepetto</span>
+    </div>
+    <div class="logo-line">
+      <img src="assets/img/crimson.png" alt="cwel" class="logo-image">
+      <span class="logo-text">Podpisane przez cwela Crimson </span>
+    </div>
+  </div>
 
-    <h1 class="main-title">Katalog Cechmistrzów</h1>
+  <h1 class="main-title">Katalog Grinderski</h1>
 
-    <section class="main-grid">
-        <a href="kowal.html" class="main-card">
-            <img src="assets/img/kowal.png" alt="Kowal">
-            <div class="overlay">Kowal</div>
-        </a>
-        <a href="platnerz.html" class="main-card">
-            <img src="assets/img/platnerz.png" alt="Płatnerz">
-            <div class="overlay">Płatnerz</div>
-        </a>
-        <a href="krawiec.html" class="main-card">
-            <img src="assets/img/krawiec.png" alt="Krawiec">
-            <div class="overlay">Krawiec</div>
-        </a>
-        <a href="ciesla.html" class="main-card">
-            <img src="assets/img/ciesla.png" alt="Cieśla">
-            <div class="overlay">Cieśla</div>
-        </a>
-    </section>
+  <section class="main-grid">
+    <a href="zawody/kowal.html" class="main-card">
+      <img src="assets/img/kowal.png" alt="Kowal">
+      <div class="card-overlay">Kowal</div>
+    </a>
+    <a href="zawody/lowca.html" class="main-card">
+      <img src="assets/img/lowca.png" alt="Łowca">
+      <div class="card-overlay">Łowca</div>
+    </a>
+    <a href="zawody/kucharz.html" class="main-card">
+      <img src="assets/img/kucharz.png" alt="Kucharz">
+      <div class="card-overlay">Kucharz</div>
+    </a>
+    <a href="zawody/drwal.html" class="main-card">
+      <img src="assets/img/drwal.png" alt="Drwal">
+      <div class="card-overlay">Drwal</div>
+    </a>
+    <a href="zawody/alchemik.html" class="main-card">
+      <img src="assets/img/alchemik.png" alt="Alchemik">
+      <div class="card-overlay">Alchemik</div>
+    </a>
+    <a href="zawody/gornik.html" class="main-card">
+      <img src="assets/img/gornik.png" alt="Górnik">
+      <div class="card-overlay">Górnik</div>
+    </a>
+    <a href="zawody/krawiec.html" class="main-card">
+      <img src="assets/img/krawiec.png" alt="Krawiec">
+      <div class="card-overlay">Krawiec</div>
+    </a>
+    <a href="zawody/farmer.html" class="main-card">
+      <img src="assets/img/farmer.png" alt="Farmer">
+      <div class="card-overlay">Farmer</div>
+    </a>
+    <a href="zawody/zielarz.html" class="main-card">
+      <img src="assets/img/zielarz.png" alt="Zielarz">
+      <div class="card-overlay">Zielarz</div>
+    </a>
+  </section>
 </body>
 </html>
