--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Katalog Rzemieślników RP Sagan</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="assets/img/logo.png" type="image/png">
+  <link rel="icon" href="assets/img/logo.webp" type="image/webp">
 </head>
 <body>
   <div class="background"></div>
   <div class="logo-container">
     <div class="logo-line">
-      <img src="assets/img/logo.png" alt="logo" class="logo-image">
+      <img src="assets/img/logo.webp" alt="logo" class="logo-image">
       <span class="logo-text">Od Sagan studio</span>
     </div>
     <div class="logo-line">
-      <img src="assets/img/msciciel.png" alt="sigma" class="logo-image">
+      <img src="assets/img/msciciel.webp" alt="sigma" class="logo-image">
       <span class="logo-text">Podjebane od sigmy Msciciel </span>
     </div>
     <div class="logo-line">
-      <img src="assets/img/gpt.png" alt="syzyf" class="logo-image">
+      <img src="assets/img/gpt.webp" alt="syzyf" class="logo-image">
       <span class="logo-text">Robione przez Gepetto</span>
     </div>
     <div class="logo-line">
-      <img src="assets/img/crimson.png" alt="cwel" class="logo-image">
+      <img src="assets/img/crimson.webp" alt="cwel" class="logo-image">
       <span class="logo-text">Podpisane przez cwela Crimson </span>
     </div>
   </div>
@@ -32,39 +32,39 @@
 
   <section class="main-grid">
     <a href="zawody/kowal.html" class="main-card">
-      <img src="assets/img/kowal.png" alt="Kowal">
+      <img src="assets/img/kowal.webp" alt="Kowal">
       <div class="card-overlay">Kowal</div>
     </a>
     <a href="zawody/lowca.html" class="main-card">
-      <img src="assets/img/lowca.png" alt="Łowca">
+      <img src="assets/img/lowca.webp" alt="Łowca">
       <div class="card-overlay">Łowca</div>
     </a>
     <a href="zawody/kucharz.html" class="main-card">
-      <img src="assets/img/kucharz.png" alt="Kucharz">
+      <img src="assets/img/kucharz.webp" alt="Kucharz">
       <div class="card-overlay">Kucharz</div>
     </a>
     <a href="zawody/drwal.html" class="main-card">
-      <img src="assets/img/drwal.png" alt="Drwal">
+      <img src="assets/img/drwal.webp" alt="Drwal">
       <div class="card-overlay">Drwal</div>
     </a>
     <a href="zawody/alchemik.html" class="main-card">
-      <img src="assets/img/alchemik.png" alt="Alchemik">
+      <img src="assets/img/alchemik.webp" alt="Alchemik">
       <div class="card-overlay">Alchemik</div>
     </a>
     <a href="zawody/gornik.html" class="main-card">
-      <img src="assets/img/gornik.png" alt="Górnik">
+      <img src="assets/img/gornik.webp" alt="Górnik">
       <div class="card-overlay">Górnik</div>
     </a>
     <a href="zawody/krawiec.html" class="main-card">
-      <img src="assets/img/krawiec.png" alt="Krawiec">
+      <img src="assets/img/krawiec.webp" alt="Krawiec">
       <div class="card-overlay">Krawiec</div>
     </a>
     <a href="zawody/farmer.html" class="main-card">
-      <img src="assets/img/farmer.png" alt="Farmer">
+      <img src="assets/img/farmer.webp" alt="Farmer">
       <div class="card-overlay">Farmer</div>
     </a>
     <a href="zawody/zielarz.html" class="main-card">
-      <img src="assets/img/zielarz.png" alt="Zielarz">
+      <img src="assets/img/zielarz.webp" alt="Zielarz">
       <div class="card-overlay">Zielarz</div>
     </a>
   </section>
