--- a/zawody/garbarz.html
+++ b/zawody/garbarz.html
@@ -11,7 +11,7 @@
   <h1 class="main-title">Garbarz</h1>
   <div class="main-grid">
     <div class="main-card">
-      <img src="../assets/img/garbarz.png" alt="Garbarz">
+      <img src="../assets/img/garbarz.webp" alt="Garbarz">
       <div class="card-overlay">Obrabia skóry i futra</div>
     </div>
   </div>
