--- a/zawody/jubiler.html
+++ b/zawody/jubiler.html
@@ -11,7 +11,7 @@
   <h1 class="main-title">Jubiler</h1>
   <section class="main-grid">
     <div class="main-card">
-      <img src="../assets/img/jubiler.png" alt="Jubiler">
+      <img src="../assets/img/jubiler.webp" alt="Jubiler">
       <div class="card-overlay">Jubiler</div>
     </div>
   </section>
