--- a/zawody/kucharz.html
+++ b/zawody/kucharz.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kucharz – Katalog Rzemieślników RP Sagan</title>
   <link rel="stylesheet" href="../styles.css">
-  <link rel="icon" href="../assets/img/logo.png" type="image/png">
+  <link rel="icon" href="../assets/img/logo.webp" type="image/webp">
 </head>
 <body>
   <div class="background"></div>
@@ -14,7 +14,7 @@
 
   <section class="main-grid">
     <div class="main-card">
-      <img src="../assets/img/kucharz.png" alt="Kucharz">
+      <img src="../assets/img/kucharz.webp" alt="Kucharz">
       <div class="card-overlay">Gotowanie, pieczenie, smażenie – co chcesz!</div>
     </div>
     <!-- Możesz dodać więcej kart z potrawami lub przetworami w tym samym stylu -->
