--- a/zawody/platnerz.html
+++ b/zawody/platnerz.html
@@ -11,7 +11,7 @@
   <h1 class="main-title">Płatnerz</h1>
   <div class="main-grid">
     <div class="main-card">
-      <img src="../assets/img/platnerz.png" alt="Płatnerz">
+      <img src="../assets/img/platnerz.webp" alt="Płatnerz">
       <div class="card-overlay">Specjalizuje się w pancerzach i zbrojach</div>
     </div>
   </div>
