--- a/zawody/rybak.html
+++ b/zawody/rybak.html
@@ -11,7 +11,7 @@
   <h1 class="main-title">Rybak</h1>
   <div class="main-grid">
     <div class="main-card">
-      <img src="../assets/img/rybak.png" alt="Rybak">
+      <img src="../assets/img/rybak.webp" alt="Rybak">
       <div class="card-overlay">Zajmuje się połowem i sprzedażą ryb</div>
     </div>
   </div>
