--- a/zawody/stolarz.html
+++ b/zawody/stolarz.html
@@ -11,7 +11,7 @@
   <h1 class="main-title">Stolarz</h1>
   <section class="main-grid">
     <div class="main-card">
-      <img src="../assets/img/stolarz.png" alt="Stolarz">
+      <img src="../assets/img/stolarz.webp" alt="Stolarz">
       <div class="card-overlay">Stolarz</div>
     </div>
   </section>
