--- a/zawody/alchemik.html
+++ b/zawody/alchemik.html
@@ -5,25 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Alchemik – Katalog Rzemieślników RP Sagan</title>
   <link rel="stylesheet" href="../styles.css" />
-  <link rel="icon" href="../assets/img/logo.png" type="image/png" />
+  <link rel="icon" href="../assets/img/logo.webp" type="image/webp" />
 </head>
 <body>
   <div class="background"></div>
   <div class="logo-container">
     <div class="logo-line">
-      <img src="../assets/img/logo.png" alt="logo" class="logo-image" />
+      <img src="../assets/img/logo.webp" alt="logo" class="logo-image" />
       <span class="logo-text">Od Sagan studio</span>
     </div>
     <div class="logo-line">
-      <img src="../assets/img/msciciel.png" alt="sigma" class="logo-image" />
+      <img src="../assets/img/msciciel.webp" alt="sigma" class="logo-image" />
       <span class="logo-text">Podjebane od sigmy Msciciel </span>
     </div>
     <div class="logo-line">
-      <img src="../assets/img/gpt.png" alt="syzyf" class="logo-image" />
+      <img src="../assets/img/gpt.webp" alt="syzyf" class="logo-image" />
       <span class="logo-text">Robione przez Gepetto</span>
     </div>
     <div class="logo-line">
-      <img src="../assets/img/crimson.png" alt="cwel" class="logo-image" />
+      <img src="../assets/img/crimson.webp" alt="cwel" class="logo-image" />
       <span class="logo-text">Podpisane przez cwela Crimson </span>
     </div>
   </div>
@@ -32,7 +32,7 @@
 
   <section class="main-grid">
     <div class="main-card">
-      <img src="../assets/img/alchemik.png" alt="Alchemik" />
+      <img src="../assets/img/alchemik.webp" alt="Alchemik" />
       <div class="card-overlay">Główna specjalizacja</div>
     </div>
   </section>
