--- a/zawody/hutnik.html
+++ b/zawody/hutnik.html
@@ -11,7 +11,7 @@
   <h1 class="main-title">Hutnik</h1>
   <section class="main-grid">
     <div class="main-card">
-      <img src="../assets/img/hutnik.png" alt="Hutnik">
+      <img src="../assets/img/hutnik.webp" alt="Hutnik">
       <div class="card-overlay">Hutnik</div>
     </div>
   </section>
