--- a/zawody/kaletnik.html
+++ b/zawody/kaletnik.html
@@ -11,7 +11,7 @@
   <h1 class="main-title">Kaletnik</h1>
   <section class="main-grid">
     <div class="main-card">
-      <img src="../assets/img/kaletnik.png" alt="Kaletnik">
+      <img src="../assets/img/kaletnik.webp" alt="Kaletnik">
       <div class="card-overlay">Kaletnik</div>
     </div>
   </section>
