--- a/zawody/kusnierz.html
+++ b/zawody/kusnierz.html
@@ -10,7 +10,7 @@
   <h1 class="main-title">Kuśnierz</h1>
   <section class="main-grid">
     <div class="main-card">
-      <img src="../assets/img/kusnierz.png" alt="Kuśnierz">
+      <img src="../assets/img/kusnierz.webp" alt="Kuśnierz">
       <div class="card-overlay">Kuśnierz</div>
     </div>
   </section>
