--- a/zawody/miecznik.html
+++ b/zawody/miecznik.html
@@ -11,7 +11,7 @@
   <h1 class="main-title">Miecznik</h1>
   <div class="main-grid">
     <div class="main-card">
-      <img src="../assets/img/miecznik.png" alt="Miecznik">
+      <img src="../assets/img/miecznik.webp" alt="Miecznik">
       <div class="card-overlay">Specjalizuje się w wykuwaniu mieczy, kordów, rapierów i innej broni siecznej.</div>
     </div>
   </div>
