--- a/zawody/alchemik.html
+++ b/zawody/alchemik.html
@@ -3,38 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Alchemik – Katalog Rzemieślników RP Sagan</title>
-  <link rel="stylesheet" href="../styles.css" />
-  <link rel="icon" href="../assets/img/logo.webp" type="image/webp" />
+  <title>Alchemik</title>
+   <link rel="stylesheet" href="../catalog.css">
+  <link rel="icon" href="../sg.ico" type="image/webp">
 </head>
-<body>
+<body data-page="alchemik">
   <div class="background"></div>
-  <div class="logo-container">
-    <div class="logo-line">
-      <img src="../assets/img/logo.webp" alt="logo" class="logo-image" />
-      <span class="logo-text">Od Sagan studio</span>
-    </div>
-    <div class="logo-line">
-      <img src="../assets/img/msciciel.webp" alt="sigma" class="logo-image" />
-      <span class="logo-text">Podjebane od sigmy Msciciel </span>
-    </div>
-    <div class="logo-line">
-      <img src="../assets/img/gpt.webp" alt="syzyf" class="logo-image" />
-      <span class="logo-text">Robione przez Gepetto</span>
-    </div>
-    <div class="logo-line">
-      <img src="../assets/img/crimson.webp" alt="cwel" class="logo-image" />
-      <span class="logo-text">Podpisane przez cwela Crimson </span>
-    </div>
-  </div>
+  <header>
+        <div class="category-buttons">
+            <button class="button" data-category="all">Wszystko</button>
+            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="specjalne">Specjalne</button>
+        </div>
+        <div class="styled-wrapper">
+            <button class="buttonq" onclick="window.location.href='../index.html'">
+                <div class="buttonq-box">
+                  <span class="buttonq-elem">
+                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="arrow-icon">
+                    <path fill="white" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"></path>
+                    </svg>
+                  </span>
+                  <span class="buttonq-elem">
+                    <svg fill="white" viewBox="0 0  24 24" xmlns="http://www.w3.org/2000/svg" class="arrow-icon">
+                    <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"></path>
+                    </svg>
+                  </span>
+                </div>
+            </button>
+        </div>
+    </header>
+ <main>
+        <section class="model-grid"></section>
 
-  <h1 class="main-title">Zawód: Alchemik</h1>
-
-  <section class="main-grid">
-    <div class="main-card">
-      <img src="../assets/img/alchemik.webp" alt="Alchemik" />
-      <div class="card-overlay">Główna specjalizacja</div>
-    </div>
-  </section>
+        <div id="model-viewer">
+            <button id="close-viewer">Zamknij</button>
+            <div id="model-info">
+                <h2 id="model-title"></h2>
+                <p id="model-description"></p>
+            </div>
+            <div id="spinner" class="spinner"></div> 
+            <model-viewer src="" alt="Model 3D" auto-rotate camera-controls></model-viewer>
+        </div>
+    </main>
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
+    <script src="../catalog.js"></script>
 </body>
 </html>
