--- a/zawody/drwal.html
+++ b/zawody/drwal.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Drwal – Katalog Rzemieślników RP Sagan</title>
+  <title>Drwal</title>
   <link rel="stylesheet" href="../styles.css" />
-  <link rel="icon" href="../assets/img/logo.webp" type="image/webp" />
+  <link rel="icon" href="../sg.ico" type="image/webp" />
 </head>
 <body>
   <div class="background"></div>
