--- a/zawody/fleczer.html
+++ b/zawody/fleczer.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katalog Fleczera</title>
-    <link rel="icon" href="../sg.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../catalog.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Katalog Fleczera</title>
+  <link rel="icon" href="../sg.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../catalog.css">
 </head>
 <body data-page="fleczer">
     
@@ -18,21 +18,30 @@
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
         <div class="styled-wrapper">
-            <button class="buttonq" onclick="window.location.href='../index.html'">
-                <div class="buttonq-box">
-                  <span class="buttonq-elem">
-                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="arrow-icon">
-                    <path fill="white" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"></path>
-                    </svg>
-                  </span>
-                  <span class="buttonq-elem">
-                    <svg fill="white" viewBox="0 0  24 24" xmlns="http://www.w3.org/2000/svg" class="arrow-icon">
-                    <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"></path>
-                    </svg>
-                  </span>
-                </div>
-            </button>
-        </div>
+		
+  
+  <button class="buttonq" onclick="window.location.href='../index.html'">
+    <div class="buttonq-box no-slide">
+      <span class="buttonq-elem">
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path fill="white" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"></path>
+        </svg>
+      </span>
+    </div>
+  </button>
+
+  <button class="buttonq" onclick="window.location.href='../zawody/drwal.html'">
+    <div class="buttonq-box no-slide">
+      <span class="buttonq-elem">
+        <svg fill="white" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"></path>
+        </svg>
+      </span>
+    </div>
+  </button>
+
+</div>
+
     </header>
 
     <main>
