--- a/zawody/drwal.html
+++ b/zawody/drwal.html
@@ -27,6 +27,22 @@
       <span class="logo-text">Podpisane przez cwela Crimson </span>
     </div>
   </div>
+  <div class="styled-wrapper">
+  <button class="buttonq" onclick="window.location.href='../index.html'">
+    <div class="buttonq-box">
+      <span class="buttonq-elem">
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="arrow-icon">
+          <path fill="white" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"></path>
+        </svg>
+      </span>
+      <span class="buttonq-elem">
+        <svg fill="white" viewBox="0 0  24 24" xmlns="http://www.w3.org/2000/svg" class="arrow-icon">
+          <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"></path>
+        </svg>
+      </span>
+    </div>
+  </button>
+</div>
 
   <h1 class="main-title">Zawód: Drwal</h1>
 
