--- a/zawody/alchemik.html
+++ b/zawody/alchemik.html
@@ -8,14 +8,21 @@
   <link rel="icon" href="../sg.ico" type="image/webp">
 </head>
 <body data-page="alchemik">
-  <div class="background"></div>
+  <div class="background5"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="TODO">TODO</button>
-            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="Mikstury Regeneracyjne">Poty</button>
+            <button class="button" data-category="Medyczne">Medyczne?</button>
+			<button class="button" data-category="Inne">Inne</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		<!--TODO
+		Filtrowanie tierami
+		SearchBar po frazie *
+		Specjalistom wyświetla się nazwa z craftu***
+		Odwiedzającym/niezielarzom/niealchemikom nazwa po łacinie***
+		Filtr z bonusami albo zapytajniki?-->
         <div class="styled-wrapper">
             <button class="buttonq" onclick="window.location.href='../index.html'">
                 <div class="buttonq-box">
