--- a/zawody/fleczer.html
+++ b/zawody/fleczer.html
@@ -13,12 +13,15 @@
     <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="łuk">łuki</button>
-            <button class="button" data-category="kusza">kusze</button>
+            <button class="button" data-category="łuki">łuki</button>
+            <button class="button" data-category="kusze">kusze</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
         <div class="styled-wrapper">
-    
+    <!--TODO
+		Filtr Tierami
+		Filtrowanie STR/DEX
+		SearchBar po frazie *-->
     <button class="buttonq" onclick="window.location.href='../index.html'">
         <div class="buttonq-box">
             <span class="buttonq-elem">
