--- a/zawody/kucharz.html
+++ b/zawody/kucharz.html
@@ -8,14 +8,18 @@
   <link rel="icon" href="../sg.ico" type="image/webp">
 </head>
 <body data-page="kucharz">
-  <div class="background"></div>
+  <div class="background3"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="TODO">TODO</button>
-            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="Alkohole">Alkohole</button>
+            <button class="button" data-category="Jadło">Jadło</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		<!--TODO
+		Filtrowanie tierami
+		SearchBar po frazie *
+		Bonusy?-->
         <div class="styled-wrapper">
             <button class="buttonq" onclick="window.location.href='../index.html'">
                 <div class="buttonq-box">
