--- a/zawody/kusnierz.html
+++ b/zawody/kusnierz.html
@@ -7,14 +7,23 @@
   <link rel="stylesheet" href="../catalog.css">
 </head>
 <body data-page="kusnierz">
-  <div class="background"></div>
+  <div class="background7"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="TODO">TODO</button>
-            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="Stroje">Stroje</button>
+            <button class="button" data-category="Pancerze">Pancerze?</button>
+			<button class="button" data-category="Chusty">Chusty</button>
+			<button class="button" data-category="Maski">Maski</button>
+			<button class="button" data-category="Czapki">Czapki</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		<!--TODO
+		Filtr Tierami
+		SearchBar po frazie *
+		Filtr Daje anonimowość?
+		Filtr... kolor?
+		-->
         <div class="styled-wrapper">
     
     <button class="buttonq" onclick="window.location.href='../index.html'">
