--- a/zawody/rybak.html
+++ b/zawody/rybak.html
@@ -8,14 +8,17 @@
   <link rel="stylesheet" href="../catalog.css">
 </head>
 <body data-page="rybak">
-  <div class="background"></div>
+  <div class="background2"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="TODO">TODO</button>
-            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="Ryby">Ryby</button>
+            <button class="button" data-category="Nie ryby">Nie ryby</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		<!--TODO
+		Filtr Tierami
+		SearchBar po frazie *-->
         <div class="styled-wrapper">
     
     <button class="buttonq" onclick="window.location.href='../index.html'">
