--- a/zawody/zielarz.html
+++ b/zawody/zielarz.html
@@ -8,14 +8,22 @@
   <link rel="stylesheet" href="../catalog.css">
 </head>
 <body data-page="zielarz">
-  <div class="background"></div>
+  <div class="background9"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="TODO">TODO</button>
-            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="Zioła">Zioła</button>
+            <button class="button" data-category="Dragi">Dragi</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		<!--TODO
+		Filtrowanie tierami
+		SearchBar po frazie *
+		Specjalistom wyświetla się nazwa z craftu***
+		Odwiedzającym/niezielarzom/niealchemikom nazwa po łacinie***
+		Filtr z bonusami albo zapytajniki?-->
+		
+		
         <div class="styled-wrapper">
             <button class="buttonq" onclick="window.location.href='../index.html'">
                 <div class="buttonq-box">
