--- a/zawody/farmer.html
+++ b/zawody/farmer.html
@@ -8,14 +8,19 @@
   <link rel="stylesheet" href="../catalog.css">
 </head>
 <body data-page="farmer">
-  <div class="background"></div>
+  <div class="background8"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="TODO">TODO</button>
-            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="Warzywa">Warzywa</button>
+            <button class="button" data-category="Owoce">Owoce</button>
+			<button class="button" data-category="Inne">Inne</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		<!--TODO
+		Filtrowanie tierami
+		SearchBar po frazie *
+		Bonusy?-->
         <div class="styled-wrapper">
             <button class="buttonq" onclick="window.location.href='../index.html'">
                 <div class="buttonq-box">
