--- a/zawody/hutnik.html
+++ b/zawody/hutnik.html
@@ -8,14 +8,17 @@
   <link rel="stylesheet" href="../catalog.css">
 </head>
 <body data-page="hutnik">
-  <div class="background"></div>
+  <div class="background6"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="TODO">TODO</button>
-            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="Sztaby">Sztaby</button>
+            <button class="button" data-category="Nie sztaby">Nie sztaby</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		<!--TODO
+		Filtr Tierami
+		SearchBar po frazie *-->
         <div class="styled-wrapper">
     
     <button class="buttonq" onclick="window.location.href='../index.html'">
