--- a/zawody/jubiler.html
+++ b/zawody/jubiler.html
@@ -8,14 +8,19 @@
   <link rel="stylesheet" href="../catalog.css">
 </head>
 <body data-page="jubiler">
-  <div class="background"></div>
+  <div class="background6"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="TODO">TODO</button>
-            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="Pieścienie">Pieścienie</button>
+            <button class="button" data-category="Naszyjniki">Naszyjniki</button>
+			<button class="button" data-category="Bransolety">Bransolety</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		<!--TODO
+		Filtr Tierami
+		Filtr z Bonusami?
+		SearchBar po frazie *-->
         <div class="styled-wrapper">
     
     <button class="buttonq" onclick="window.location.href='../index.html'">
