--- a/zawody/kaletnik.html
+++ b/zawody/kaletnik.html
@@ -8,14 +8,21 @@
   <link rel="stylesheet" href="../catalog.css">
 </head>
 <body data-page="kaletnik">
-  <div class="background"></div>
+  <div class="background7"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="TODO">TODO</button>
-            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="Pasy">Pasy</button>
+            <button class="button" data-category="Torby">Torby</button>
+			<button class="button" data-category="Plecaki">Plecaki</button>
+			<button class="button" data-category="Mieszki">Mieszki</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		<!--Todo
+		Filtr Tierami
+		Filtr Wagą?
+		SearchBar po frazie *
+		-->
         <div class="styled-wrapper">
     
     <button class="buttonq" onclick="window.location.href='../index.html'">
