--- a/zawody/miecznik.html
+++ b/zawody/miecznik.html
@@ -8,14 +8,22 @@
   <link rel="stylesheet" href="../catalog.css">
 </head>
 <body data-page="miecznik">
-  <div class="background"></div>
+  <div class="background1"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="TODO">TODO</button>
-            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="Miecze">Miecze</button>
+            <button class="button" data-category="Rapiery">Rapiery</button>
+			<button class="button" data-category="Topory">Topory</button>
+			<button class="button" data-category="Obuchy">Obuchy</button>
+			<button class="button" data-category="Drzewcowe">Drzewcowe</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		<!-- TODO--
+		Filtrowanie tierami
+		Filtrowanie 1h/2h--
+		Filtrowanie STR/DEX
+		SearchBar po frazie *-->
        <div class="styled-wrapper">
     
     <button class="buttonq" onclick="window.location.href='../index.html'">
