--- a/zawody/platnerz.html
+++ b/zawody/platnerz.html
@@ -8,14 +8,20 @@
   <link rel="stylesheet" href="../catalog.css">
 </head>
 <body data-page="platnerz">
-  <div class="background"></div>
+  <div class="background1"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="TODO">TODO</button>
-            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="Zbroje">Zbroje</button>
+            <button class="button" data-category="Hełmy">Hełmy</button>
+			<button class="button" data-category="Tarcze">Tarcze</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		<!--TODO
+		Filtrowanie tierami
+		Filtrowanie STR/DEX
+		Filtr Visual Płyta/Skóra
+		SearchBar po frazie *-->
         <div class="styled-wrapper">
     
     <button class="buttonq" onclick="window.location.href='../index.html'">
