--- a/zawody/stolarz.html
+++ b/zawody/stolarz.html
@@ -8,14 +8,19 @@
   <link rel="stylesheet" href="../catalog.css">
 </head>
 <body data-page="stolarz">
-  <div class="background"></div>
+  <div class="background4"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="TODO">TODO</button>
-            <button class="button" data-category="TODO">TODO</button>
+            <button class="button" data-category="Dekoracyjne">Dekoracyjne</button>
+            <button class="button" data-category="Łóżka">Łóżka</button>
+			<button class="button" data-category="Stoły Craftingowe">Stoły Craftingowe?</button>
+			<button class="button" data-category="Inne">Inne</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		<!--TODO
+		Filtr Tierami
+		SearchBar po frazie *-->
         <div class="styled-wrapper">
     
     <button class="buttonq" onclick="window.location.href='../index.html'">
