--- a/zawody/alchemik.html
+++ b/zawody/alchemik.html
@@ -19,11 +19,13 @@
         </div>
 		<!--TODO
 		Filtrowanie tierami
-		SearchBar po frazie *
 		Specjalistom wyświetla się nazwa z craftu***
 		Odwiedzającym/niezielarzom/niealchemikom nazwa po łacinie***
 		Filtr z bonusami albo zapytajniki?-->
         <div class="styled-wrapper">
+		<div class="search-wrapper">
+		<input type="text" id="search-bar" placeholder="🔍 Szukaj...">
+		</div>
             <button class="buttonq" onclick="window.location.href='../index.html'">
                 <div class="buttonq-box">
                   <span class="buttonq-elem">
@@ -41,6 +43,10 @@
         </div>
     </header>
  <main>
+		<section class="search-feedback">
+			<div id="search-status" class="search-status"></div>
+			<div id="no-results" class="no-results">Brak wyników</div>
+		</section>
         <section class="model-grid"></section>
 
         <div id="model-viewer">
