--- a/zawody/jubiler.html
+++ b/zawody/jubiler.html
@@ -20,8 +20,11 @@
 		<!--TODO
 		Filtr Tierami
 		Filtr z Bonusami?
-		SearchBar po frazie *-->
+		-->
         <div class="styled-wrapper">
+		<div class="search-wrapper">
+		<input type="text" id="search-bar" placeholder="🔍 Szukaj...">
+		</div>
     
     <button class="buttonq" onclick="window.location.href='../index.html'">
         <div class="buttonq-box">
@@ -58,6 +61,10 @@
 </div>
     </header>
 <main>
+		<section class="search-feedback">
+			<div id="search-status" class="search-status"></div>
+			<div id="no-results" class="no-results">Brak wyników</div>
+		</section>
         <section class="model-grid"></section>
 
         <div id="model-viewer">
