--- a/zawody/kaletnik.html
+++ b/zawody/kaletnik.html
@@ -21,9 +21,12 @@
 		<!--Todo
 		Filtr Tierami
 		Filtr Wagą?
-		SearchBar po frazie *
+		
 		-->
         <div class="styled-wrapper">
+		<div class="search-wrapper">
+		<input type="text" id="search-bar" placeholder="🔍 Szukaj...">
+		</div>
     
     <button class="buttonq" onclick="window.location.href='../index.html'">
         <div class="buttonq-box">
@@ -60,6 +63,10 @@
 </div>
     </header>
  <main>
+		<section class="search-feedback">
+			<div id="search-status" class="search-status"></div>
+			<div id="no-results" class="no-results">Brak wyników</div>
+		</section>
         <section class="model-grid"></section>
 
         <div id="model-viewer">
