--- a/zawody/kucharz.html
+++ b/zawody/kucharz.html
@@ -18,9 +18,12 @@
         </div>
 		<!--TODO
 		Filtrowanie tierami
-		SearchBar po frazie *
+		
 		Bonusy?-->
         <div class="styled-wrapper">
+		<div class="search-wrapper">
+		<input type="text" id="search-bar" placeholder="🔍 Szukaj...">
+		</div>
             <button class="buttonq" onclick="window.location.href='../index.html'">
                 <div class="buttonq-box">
                   <span class="buttonq-elem">
@@ -38,6 +41,10 @@
         </div>
     </header>
  <main>
+		<section class="search-feedback">
+			<div id="search-status" class="search-status"></div>
+			<div id="no-results" class="no-results">Brak wyników</div>
+		</section>
         <section class="model-grid"></section>
 
         <div id="model-viewer">
