--- a/zawody/kusnierz.html
+++ b/zawody/kusnierz.html
@@ -20,12 +20,14 @@
         </div>
 		<!--TODO
 		Filtr Tierami
-		SearchBar po frazie *
+		
 		Filtr Daje anonimowość?
 		Filtr... kolor?
 		-->
         <div class="styled-wrapper">
-    
+		<div class="search-wrapper">
+		<input type="text" id="search-bar" placeholder="🔍 Szukaj...">
+		</div>
     <button class="buttonq" onclick="window.location.href='../index.html'">
         <div class="buttonq-box">
             <span class="buttonq-elem">
@@ -61,6 +63,10 @@
 </div>
     </header>
  <main>
+		<section class="search-feedback">
+			<div id="search-status" class="search-status"></div>
+			<div id="no-results" class="no-results">Brak wyników</div>
+		</section>
         <section class="model-grid"></section>
 
         <div id="model-viewer">
