--- a/zawody/platnerz.html
+++ b/zawody/platnerz.html
@@ -21,9 +21,11 @@
 		Filtrowanie tierami
 		Filtrowanie STR/DEX
 		Filtr Visual Płyta/Skóra
-		SearchBar po frazie *-->
+		-->
         <div class="styled-wrapper">
-    
+		<div class="search-wrapper">
+		<input type="text" id="search-bar" placeholder="🔍 Szukaj...">
+		</div>
     <button class="buttonq" onclick="window.location.href='../index.html'">
         <div class="buttonq-box">
             <span class="buttonq-elem">
@@ -59,6 +61,10 @@
 </div>
     </header>
  <main>
+		<section class="search-feedback">
+			<div id="search-status" class="search-status"></div>
+			<div id="no-results" class="no-results">Brak wyników</div>
+		</section>
         <section class="model-grid"></section>
 
         <div id="model-viewer">
