--- a/zawody/stolarz.html
+++ b/zawody/stolarz.html
@@ -21,8 +21,14 @@
         </div>
 		<!--TODO
 		Filtr Tierami
-		SearchBar po frazie *-->
+		-->
         <div class="styled-wrapper">
+		<div class="search-wrapper">
+		<input type="text" id="search-bar" placeholder="🔍 Szukaj...">
+		</div>
+		
+
+
     
     <button class="buttonq" onclick="window.location.href='../index.html'">
         <div class="buttonq-box">
@@ -59,6 +65,11 @@
 </div>
     </header>
  <main>
+ 
+		<section class="search-feedback">
+			<div id="search-status" class="search-status"></div>
+			<div id="no-results" class="no-results">Brak wyników</div>
+		</section>
         <section class="model-grid"></section>
 
         <div id="model-viewer">
