--- a/zawody/miecznik.html
+++ b/zawody/miecznik.html
@@ -20,14 +20,44 @@
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
 		<!-- TODO--
-		Filtrowanie tierami
-		Filtrowanie 1h/2h--
 		Filtrowanie STR/DEX
 		-->
        <div class="styled-wrapper">
-		<div class="search-wrapper">
-		<input type="text" id="search-bar" placeholder="🔍 Szukaj...">
-		</div>
+  <aside id="side-filters">
+    <div id="filter-toggle-tab">❯</div>
+
+  <div class="filters-wrapper">
+  <div class="filter-section">
+    <span class="filter-label">Tier:</span>
+    <button class="filter-button" data-tier="T0">N</button>
+    <button class="filter-button" data-tier="T1">I</button>
+    <button class="filter-button" data-tier="T2">II</button>
+    <button class="filter-button" data-tier="T3">III</button>
+    <button class="filter-button" data-tier="T4">IV</button>
+    <button class="filter-button" data-tier="T5">V</button>
+  </div>
+  <div class="filter-section">
+    <span class="filter-label">Typ:</span>
+    <button class="filter-button" data-hands="1H">1H</button>
+    <button class="filter-button" data-hands="2H">2H</button>
+  </div>
+  <div class="filter-section">
+    <span class="filter-label">Stat:</span>
+    <button class="filter-button" data-stat="STR">STR</button>
+    <button class="filter-button" data-stat="DEX">DEX</button>
+    <button class="filter-button" data-stat="BOTH">BOTH</button>
+  </div>
+  <div class="filter-section">
+    <span class="filter-label">Obrażenia:</span>
+    <button class="filter-button" data-dmg="CUT">✂️</button>
+    <button class="filter-button" data-dmg="PRC">🗡️</button>
+    <button class="filter-button" data-dmg="BLT">🔨</button>
+  </div>
+
+  <input type="text" id="search-bar" placeholder="🔍 Szukaj...">
+</div>
+</aside>
+
     <button class="buttonq" onclick="window.location.href='../index.html'">
         <div class="buttonq-box">
             <span class="buttonq-elem">
