--- a/zawody/hutnik.html
+++ b/zawody/hutnik.html
@@ -16,13 +16,24 @@
             <button class="button" data-category="Nie sztaby">Nie sztaby</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
-		<!--TODO
-		Filtr Tierami
-		-->
+		
         <div class="styled-wrapper">
-		<div class="search-wrapper">
-		<input type="text" id="search-bar" placeholder="🔍 Szukaj...">
-		</div>
+		<aside id="side-filters">
+    <div id="filter-toggle-tab">❯</div>
+
+  <div class="filters-wrapper">
+  <div class="filter-section">
+    <span class="filter-label">Tier:</span>
+    <button class="filter-button" data-tier="T0">N</button>
+    <button class="filter-button" data-tier="T1">I</button>
+    <button class="filter-button" data-tier="T2">II</button>
+    <button class="filter-button" data-tier="T3">III</button>
+    <button class="filter-button" data-tier="T4">IV</button>
+    <button class="filter-button" data-tier="T5">V</button>
+
+  <input type="text" id="search-bar" placeholder="🔍 Szukaj...">
+</div>
+</aside>
     <button class="buttonq" onclick="window.location.href='../index.html'">
         <div class="buttonq-box">
             <span class="buttonq-elem">
