--- a/zawody/jubiler.html
+++ b/zawody/jubiler.html
@@ -35,6 +35,39 @@
     <button class="filter-button" data-tier="T3">III</button>
     <button class="filter-button" data-tier="T4">IV</button>
     <button class="filter-button" data-tier="T5">V</button>
+	
+	<div class="filter-section">
+    <span class="filter-label">Pierwsza litera:</span>
+    <div class="alphabet-filters">
+        <button class="filter-button" data-letter="A">A</button>
+        <button class="filter-button" data-letter="B">B</button>
+        <button class="filter-button" data-letter="C">C</button>
+        <button class="filter-button" data-letter="D">D</button>
+        <button class="filter-button" data-letter="E">E</button>
+        <button class="filter-button" data-letter="F">F</button>
+        <button class="filter-button" data-letter="G">G</button>
+        <button class="filter-button" data-letter="H">H</button>
+        <button class="filter-button" data-letter="I">I</button>
+        <button class="filter-button" data-letter="J">J</button>
+        <button class="filter-button" data-letter="K">K</button>
+        <button class="filter-button" data-letter="L">L</button>
+        <button class="filter-button" data-letter="M">M</button>
+        <button class="filter-button" data-letter="N">N</button>
+        <button class="filter-button" data-letter="O">O</button>
+        <button class="filter-button" data-letter="P">P</button>
+        <button class="filter-button" data-letter="Q">Q</button>
+        <button class="filter-button" data-letter="R">R</button>
+        <button class="filter-button" data-letter="S">S</button>
+        <button class="filter-button" data-letter="T">T</button>
+        <button class="filter-button" data-letter="U">U</button>
+        <button class="filter-button" data-letter="V">V</button>
+        <button class="filter-button" data-letter="W">W</button>
+        <button class="filter-button" data-letter="X">X</button>
+        <button class="filter-button" data-letter="Y">Y</button>
+        <button class="filter-button" data-letter="Z">Z</button>
+        <button class="filter-button" data-letter="123">123</button>
+    </div>
+  </div>
 
   <input type="text" id="search-bar" placeholder="🔍 Szukaj...">
 </div>
