--- a/zawody/jubiler.html
+++ b/zawody/jubiler.html
@@ -68,6 +68,12 @@
         <button class="filter-button" data-letter="123">123</button>
     </div>
   </div>
+  
+	<div class="filter-section">
+    <span class="filter-label">Źródło nazwy:</span>
+    <button class="filter-button" data-display-source="name">Nazwa (Name)</button>
+    <button class="filter-button" data-display-source="title">Tytuł (Title)</button>
+	</div>
 
   <input type="text" id="search-bar" placeholder="🔍 Szukaj...">
 </div>
