--- a/index.html
+++ b/index.html
@@ -43,29 +43,29 @@
       <img src="assets/img/kucharz.webp" alt="Kucharz">
       <div class="card-overlay">Kucharz</div>
     </a>
-    <a href="zawody/drwal.html" class="main-card">
-      <img src="assets/img/drwal.webp" alt="Drwal">
-      <div class="card-overlay">Drwal</div>
+    <a href="zawody/robotnik.html" class="main-card">
+      <img src="assets/img/robotnik.webp" alt="Robotnik">
+      <div class="card-overlay">Robotnik</div>
     </a>
     <a href="zawody/alchemik.html" class="main-card">
       <img src="assets/img/alchemik.webp" alt="Alchemik">
       <div class="card-overlay">Alchemik</div>
     </a>
-    <a href="zawody/gornik.html" class="main-card">
-      <img src="assets/img/gornik.webp" alt="Górnik">
-      <div class="card-overlay">Górnik</div>
+    <a href="zawody/zaklinacz.html" class="main-card">
+      <img src="assets/img/zaklinacz.webp" alt="Zaklinacz">
+      <div class="card-overlay">Zaklinacz</div>
     </a>
     <a href="zawody/krawiec.html" class="main-card">
       <img src="assets/img/krawiec.webp" alt="Krawiec">
       <div class="card-overlay">Krawiec</div>
     </a>
-    <a href="zawody/farmer.html" class="main-card">
-      <img src="assets/img/farmer.webp" alt="Farmer">
-      <div class="card-overlay">Farmer</div>
+    <a href="zawody/rolnik.html" class="main-card">
+      <img src="assets/img/rolnik.webp" alt="Rolnik">
+      <div class="card-overlay">Rolnik</div>
     </a>
-    <a href="zawody/zielarz.html" class="main-card">
-      <img src="assets/img/zielarz.webp" alt="Zielarz">
-      <div class="card-overlay">Zielarz</div>
+    <a href="zawody/zbieracz.html" class="main-card">
+      <img src="assets/img/zbieracz.webp" alt="Zbieracz">
+      <div class="card-overlay">Zbieracz</div>
     </a>
   </section>
 </body>
