--- a/zawody/krawiec.html
+++ b/zawody/krawiec.html
@@ -47,6 +47,12 @@
   <h1 class="main-title">Zawód: Krawiec</h1>
 
   <section class="main-grid">
+	
+	<a href="ubrania.html" class="main-card">
+      <img src="../assets/img/ubrania.webp" alt="Ubrania" />
+      <div class="card-overlay">Ubrania</div>
+   </a>
+  
    <a href="kaletnik.html" class="main-card">
       <img src="../assets/img/kaletnik.webp" alt="Kaletnik" />
       <div class="card-overlay">Kaletnik</div>
