--- a/zawody/lowca.html
+++ b/zawody/lowca.html
@@ -47,14 +47,17 @@
   <h1 class="main-title">Zawód: Łowca</h1>
 
   <section class="main-grid">
-    <a href="garbarz.html" class="main-card">
-      <img src="../assets/img/garbarz.webp" alt="Garbarz" />
-      <div class="card-overlay">Garbarz</div>
+  
+    <a href="mysliwy.html" class="main-card">
+      <img src="../assets/img/mysliwy.webp" alt="Myśliwy" />
+      <div class="card-overlay">Myśliwy</div>
 	</a>
-    <a href="rybak.html" class="main-card">
-      <img src="../assets/img/rybak.webp" alt="Rybak" />
-      <div class="card-overlay">Rybak</div>
+	
+    <a href="luczarz.html" class="main-card">
+      <img src="../assets/img/luczarz.webp" alt="Łuczarz" />
+      <div class="card-overlay">Łuczarz</div>
     </a>
+	
   </section>
 </body>
 </html>
