--- a/zawody/robotnik.html
+++ b/zawody/robotnik.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kowal</title>
+  <title>Robotnik</title>
   <link rel="stylesheet" href="../styles.css" />
   <link rel="icon" href="../sg.ico" type="image/webp" />
 </head>
@@ -44,24 +44,26 @@
   </button>
 </div>
 
-  <h1 class="main-title">Zawód: Kowal</h1>
+  <h1 class="main-title">Zawód: Robotnik</h1>
 
   <section class="main-grid">
-  
-	<a href="rafinacja_metali.html" class="main-card">
-      <img src="../assets/img/rafinacja_metali.webp" alt="Rafinacja Metali" />
-      <div class="card-overlay">Rafinacja Metali</div>
-	</a>
 	
-    <a href="zbrojmistrz.html" class="main-card">
-      <img src="../assets/img/zbrojmistrz.webp" alt="Zbrojmistrz" />
-      <div class="card-overlay">Zbrojmistrz</div>
-	</a>
-
-    <a href="platnerz.html" class="main-card">
-      <img src="../assets/img/platnerz.webp" alt="Płatnerz" />
-      <div class="card-overlay">Płatnerz</div>
+	<a href="hutnik.html" class="main-card">
+      <img src="../assets/img/hutnik.webp" alt="Hutnik" />
+      <div class="card-overlay">Hutnik</div>
+    </a>
+  
+   <a href="gornik.html" class="main-card">
+      <img src="../assets/img/gornik.webp" alt="Górnik" />
+      <div class="card-overlay">Górnik</div>
    </a>
+
+	
+	<a href="drwal.html" class="main-card">
+      <img src="../assets/img/drwal.webp" alt="Drwal" />
+      <div class="card-overlay">Drwal</div>
+   </a>
+   
   </section>
 </body>
 </html>
