--- a/zawody/zbieracz.html
+++ b/zawody/zbieracz.html
@@ -3,24 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Farmer</title>
+  <title>Zbieracz</title>
   <link rel="icon" href="../sg.ico" type="image/x-icon">
   <link rel="stylesheet" href="../catalog.css">
 </head>
-<body data-page="farmer">
-  <div class="background8"></div>
+<body data-page="zbieracz">
+  <div class="background9"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Warzywa">Warzywa</button>
-            <button class="button" data-category="Owoce">Owoce</button>
-			<button class="button" data-category="Inne">Inne</button>
+            <button class="button" data-category="Zioła">Zioła</button>
+            <button class="button" data-category="Dragi">Dragi</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
 		
 		<!--TODO
-		Bonusy?
+		Specjalistom wyświetla się nazwa z craftu***
+		Odwiedzającym/niezielarzom/niealchemikom nazwa po łacinie***
+		Filtr z bonusami albo zapytajniki?
 		-->
+		
 		
         <div class="styled-wrapper">
 		<aside id="side-filters">
@@ -35,7 +37,8 @@
     <button class="filter-button" data-tier="T3">III</button>
     <button class="filter-button" data-tier="T4">IV</button>
     <button class="filter-button" data-tier="T5">V</button>
-
+  </div>
+  
   <input type="text" id="search-bar" placeholder="🔍 Szukaj...">
 </div>
 </aside>
