--- a/zawody/rafinacja_metali.html
+++ b/zawody/rafinacja_metali.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stolarz</title>
+  <title>Rafinacja Metali</title>
   <link rel="icon" href="../sg.ico" type="image/x-icon">
   <link rel="stylesheet" href="../catalog.css">
 </head>
-<body data-page="stolarz">
-  <div class="background4"></div>
+<body data-page="rafinacja_metali">
+  <div class="background1"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Dekoracyjne">Dekoracyjne</button>
-            <button class="button" data-category="Łóżka">Łóżka</button>
-			<button class="button" data-category="Stoły Craftingowe">Stoły Craftingowe?</button>
-			<button class="button" data-category="Inne">Inne</button>
+            <button class="button" data-category="Miecze">Miecze</button>
+            <button class="button" data-category="Rapiery">Rapiery</button>
+			<button class="button" data-category="Topory">Topory</button>
+			<button class="button" data-category="Obuchy">Obuchy</button>
+			<button class="button" data-category="Drzewcowe">Drzewcowe</button>
             <button class="button" data-category="specjalne">Specjalne</button>
-			<button class="button" data-category="Meble">Meble</button>
         </div>
-        <div class="styled-wrapper">
-		<aside id="side-filters">
+       <div class="styled-wrapper">
+  <aside id="side-filters">
     <div id="filter-toggle-tab">❯</div>
 
   <div class="filters-wrapper">
@@ -33,14 +33,28 @@
     <button class="filter-button" data-tier="T4">IV</button>
     <button class="filter-button" data-tier="T5">V</button>
   </div>
+  <div class="filter-section">
+    <span class="filter-label">Typ:</span>
+    <button class="filter-button" data-hands="1H">1H</button>
+    <button class="filter-button" data-hands="2H">2H</button>
+  </div>
+  <div class="filter-section">
+    <span class="filter-label">Stat:</span>
+    <button class="filter-button" data-stat="STR">STR</button>
+    <button class="filter-button" data-stat="DEX">DEX</button>
+    <button class="filter-button" data-stat="BOTH">BOTH</button>
+  </div>
+  <div class="filter-section">
+    <span class="filter-label">Obrażenia:</span>
+    <button class="filter-button" data-dmg="CUT">✂️</button>
+    <button class="filter-button" data-dmg="PRC">🗡️</button>
+    <button class="filter-button" data-dmg="BLT">🔨</button>
+  </div>
 
   <input type="text" id="search-bar" placeholder="🔍 Szukaj...">
 </div>
 </aside>
-		
 
-
-    
     <button class="buttonq" onclick="window.location.href='../index.html'">
         <div class="buttonq-box">
             <span class="buttonq-elem">
@@ -57,7 +71,7 @@
     </button>
 
 
-    <button class="buttonq" onclick="window.location.href='../zawody/drwal.html'">
+    <button class="buttonq" onclick="window.location.href='../zawody/kowal.html'">
         <div class="buttonq-box">
             <span class="buttonq-elem">
                
@@ -76,7 +90,6 @@
 </div>
     </header>
  <main>
- 
 		<section class="search-feedback">
 			<div id="search-status" class="search-status"></div>
 			<div id="no-results" class="no-results">Brak wyników</div>
