--- a/zawody/zaklinacz.html
+++ b/zawody/zaklinacz.html
@@ -3,19 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Drwal</title>
+  <title>Zaklinacz</title>
   <link rel="icon" href="../sg.ico" type="image/x-icon">
   <link rel="stylesheet" href="../catalog.css">
 </head>
-<body data-page="drwal">
+<body data-page="zaklinacz">
   <div class="background6"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Sztaby">Sztaby</button>
-            <button class="button" data-category="Nie sztaby">Nie sztaby</button>
+            <button class="button" data-category="Pieścienie">Pieścienie</button>
+            <button class="button" data-category="Naszyjniki">Naszyjniki</button>
+			<button class="button" data-category="Bransolety">Bransolety</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
+		
+		<!--TODO
+		Filtr z Bonusami?
+		-->
 		
         <div class="styled-wrapper">
 		<aside id="side-filters">
@@ -30,10 +35,44 @@
     <button class="filter-button" data-tier="T3">III</button>
     <button class="filter-button" data-tier="T4">IV</button>
     <button class="filter-button" data-tier="T5">V</button>
-
+	
+	<div class="filter-section">
+    <span class="filter-label">Pierwsza litera:</span>
+    <div class="alphabet-filters">
+        <button class="filter-button" data-letter="A">A</button>
+        <button class="filter-button" data-letter="B">B</button>
+        <button class="filter-button" data-letter="C">C</button>
+        <button class="filter-button" data-letter="D">D</button>
+        <button class="filter-button" data-letter="E">E</button>
+        <button class="filter-button" data-letter="F">F</button>
+        <button class="filter-button" data-letter="G">G</button>
+        <button class="filter-button" data-letter="H">H</button>
+        <button class="filter-button" data-letter="I">I</button>
+        <button class="filter-button" data-letter="J">J</button>
+        <button class="filter-button" data-letter="K">K</button>
+        <button class="filter-button" data-letter="L">L</button>
+        <button class="filter-button" data-letter="M">M</button>
+        <button class="filter-button" data-letter="N">N</button>
+        <button class="filter-button" data-letter="O">O</button>
+        <button class="filter-button" data-letter="P">P</button>
+        <button class="filter-button" data-letter="Q">Q</button>
+        <button class="filter-button" data-letter="R">R</button>
+        <button class="filter-button" data-letter="S">S</button>
+        <button class="filter-button" data-letter="T">T</button>
+        <button class="filter-button" data-letter="U">U</button>
+        <button class="filter-button" data-letter="V">V</button>
+        <button class="filter-button" data-letter="W">W</button>
+        <button class="filter-button" data-letter="X">X</button>
+        <button class="filter-button" data-letter="Y">Y</button>
+        <button class="filter-button" data-letter="Z">Z</button>
+        <button class="filter-button" data-letter="123">123</button>
+    </div>
+  </div>
+  
   <input type="text" id="search-bar" placeholder="🔍 Szukaj...">
 </div>
 </aside>
+    
     <button class="buttonq" onclick="window.location.href='../index.html'">
         <div class="buttonq-box">
             <span class="buttonq-elem">
@@ -68,7 +107,7 @@
     </button>
 </div>
     </header>
- <main>
+<main>
 		<section class="search-feedback">
 			<div id="search-status" class="search-status"></div>
 			<div id="no-results" class="no-results">Brak wyników</div>
