--- a/zawody/zbrojmistrz.html
+++ b/zawody/zbrojmistrz.html
@@ -3,22 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rybak</title>
+  <title>Zbrojmistrz</title>
   <link rel="icon" href="../sg.ico" type="image/x-icon">
   <link rel="stylesheet" href="../catalog.css">
 </head>
-<body data-page="rybak">
-  <div class="background2"></div>
+<body data-page="zbrojmistrz">
+  <div class="background1"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Ryby">Ryby</button>
-            <button class="button" data-category="Nie ryby">Nie ryby</button>
+            <button class="button" data-category="Miecze">Miecze</button>
+            <button class="button" data-category="Rapiery">Rapiery</button>
+			<button class="button" data-category="Topory">Topory</button>
+			<button class="button" data-category="Obuchy">Obuchy</button>
+			<button class="button" data-category="Drzewcowe">Drzewcowe</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
-		
-        <div class="styled-wrapper">
-		<aside id="side-filters">
+       <div class="styled-wrapper">
+  <aside id="side-filters">
     <div id="filter-toggle-tab">❯</div>
 
   <div class="filters-wrapper">
@@ -30,10 +32,29 @@
     <button class="filter-button" data-tier="T3">III</button>
     <button class="filter-button" data-tier="T4">IV</button>
     <button class="filter-button" data-tier="T5">V</button>
+  </div>
+  <div class="filter-section">
+    <span class="filter-label">Typ:</span>
+    <button class="filter-button" data-hands="1H">1H</button>
+    <button class="filter-button" data-hands="2H">2H</button>
+  </div>
+  <div class="filter-section">
+    <span class="filter-label">Stat:</span>
+    <button class="filter-button" data-stat="STR">STR</button>
+    <button class="filter-button" data-stat="DEX">DEX</button>
+    <button class="filter-button" data-stat="BOTH">BOTH</button>
+  </div>
+  <div class="filter-section">
+    <span class="filter-label">Obrażenia:</span>
+    <button class="filter-button" data-dmg="CUT">✂️</button>
+    <button class="filter-button" data-dmg="PRC">🗡️</button>
+    <button class="filter-button" data-dmg="BLT">🔨</button>
+  </div>
 
   <input type="text" id="search-bar" placeholder="🔍 Szukaj...">
 </div>
 </aside>
+
     <button class="buttonq" onclick="window.location.href='../index.html'">
         <div class="buttonq-box">
             <span class="buttonq-elem">
@@ -50,7 +71,7 @@
     </button>
 
 
-    <button class="buttonq" onclick="window.location.href='../zawody/lowca.html'">
+    <button class="buttonq" onclick="window.location.href='../zawody/kowal.html'">
         <div class="buttonq-box">
             <span class="buttonq-elem">
                
