--- a/zawody/mysliwy.html
+++ b/zawody/mysliwy.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Garbarz</title>
+  <title>My≈õliwy</title>
   <link rel="icon" href="../sg.ico" type="image/x-icon">
   <link rel="stylesheet" href="../catalog.css">
 </head>
-<body data-page="garbarz">
+<body data-page="mysliwy">
   <div class="background2"></div>
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Sk®Æry">Sk®Æry</button>
-            <button class="button" data-category="Nie sk®Æry">Nie sk®Æry</button>
+            <button class="button" data-category="Sk¬®¬Æry">Sk√≥ry</button>
+            <button class="button" data-category="Nie sk¬®¬Æry">Nie sk√≥ry</button>
             <button class="button" data-category="specjalne">Specjalne</button>
         </div>
 		
@@ -71,7 +71,7 @@
  <main>
 		<section class="search-feedback">
 			<div id="search-status" class="search-status"></div>
-			<div id="no-results" class="no-results">Brak wynik√≥w</div>
+			<div id="no-results" class="no-results">Brak wynikƒÇ≈Çw</div>
 		</section>
         <section class="model-grid"></section>
 
