--- a/zawody/kucharz.html
+++ b/zawody/kucharz.html
@@ -12,9 +12,9 @@
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Alkohole">Alkohole</button>
-            <button class="button" data-category="Jadło">Jadło</button>
-            <button class="button" data-category="specjalne">Specjalne</button>
+            <button class="button" data-category="Kuchenka">Kuchenka</button>
+            <button class="button" data-category="Garnek">Garnek</button>
+            <button class="button" data-category="Piec">Piec</button>
         </div>
 		
 		<!--TODO
