--- a/zawody/mysliwy.html
+++ b/zawody/mysliwy.html
@@ -12,14 +12,13 @@
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Sk¨®ry">Skóry</button>
-            <button class="button" data-category="Nie sk¨®ry">Nie skóry</button>
-            <button class="button" data-category="specjalne">Specjalne</button>
+            <button class="button" data-category="Truchła">Truchła</button>
+            <button class="button" data-category="Materiały z zwierzyny">Materiały z zwierzyny</button>
         </div>
 		
         <div class="styled-wrapper">
 		<aside id="side-filters">
-    <div id="filter-toggle-tab">?</div>
+    <div id="filter-toggle-tab">❯</div>
 
   <div class="filters-wrapper">
   <div class="filter-section">
@@ -31,7 +30,7 @@
     <button class="filter-button" data-tier="T4">IV</button>
     <button class="filter-button" data-tier="T5">V</button>
 
-  <input type="text" id="search-bar" placeholder="?? Szukaj...">
+  <input type="text" id="search-bar" placeholder="🔍 Szukaj...">
 </div>
 </aside>
     <button class="buttonq" onclick="window.location.href='../index.html'">
