--- a/zawody/zbieracz.html
+++ b/zawody/zbieracz.html
@@ -12,9 +12,9 @@
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Zioła">Zioła</button>
-            <button class="button" data-category="Dragi">Dragi</button>
-            <button class="button" data-category="specjalne">Specjalne</button>
+            <button class="button" data-category="Rośliny">Rośliny</button>
+            <button class="button" data-category="Dary lasu">Dary lasu</button>
+            <button class="button" data-category="Owoce morza">Owoce morza</button>
         </div>
 		
 		<!--TODO
