--- a/zawody/alchemik.html
+++ b/zawody/alchemik.html
@@ -12,10 +12,8 @@
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Mikstury Regeneracyjne">Poty</button>
-            <button class="button" data-category="Medyczne">Medyczne?</button>
-			<button class="button" data-category="Inne">Inne</button>
-            <button class="button" data-category="specjalne">Specjalne</button>
+            <button class="button" data-category="Alkohole">Alkohole</button>
+            <button class="button" data-category="Alchemia">Alchemia</button>
         </div>
 		
 		<!--TODO
