--- a/zawody/kaletnik.html
+++ b/zawody/kaletnik.html
@@ -12,11 +12,8 @@
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Pasy">Pasy</button>
-            <button class="button" data-category="Torby">Torby</button>
-			<button class="button" data-category="Plecaki">Plecaki</button>
-			<button class="button" data-category="Mieszki">Mieszki</button>
-            <button class="button" data-category="specjalne">Specjalne</button>
+			<button class="button" data-category="Akcesoria">Akcesoria</button>
+            <button class="button" data-category="Inne">Inne</button>
         </div>
 		
 		<!--Todo
