--- a/zawody/kusnierz.html
+++ b/zawody/kusnierz.html
@@ -11,12 +11,9 @@
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Stroje">Stroje</button>
-            <button class="button" data-category="Pancerze">Pancerze?</button>
-			<button class="button" data-category="Chusty">Chusty</button>
-			<button class="button" data-category="Maski">Maski</button>
-			<button class="button" data-category="Czapki">Czapki</button>
-            <button class="button" data-category="specjalne">Specjalne</button>
+			<button class="button" data-category="Pancerz lekki">Pancerz lekki</button>
+            <button class="button" data-category="Pasy">Pasy</button>
+            <button class="button" data-category="Inne">Inne</button>
         </div>
 		
 		<!--TODO
@@ -37,7 +34,14 @@
     <button class="filter-button" data-tier="T3">III</button>
     <button class="filter-button" data-tier="T4">IV</button>
     <button class="filter-button" data-tier="T5">V</button>
-
+	
+	<div class="filter-section">
+      <span class="filter-label">Stat:</span>
+      <button class="filter-button" data-stat="STR">STR</button>
+      <button class="filter-button" data-stat="DEX">DEX</button>
+      <button class="filter-button" data-stat="BOTH">BOTH</button>
+    </div>
+	
   <input type="text" id="search-bar" placeholder="🔍 Szukaj...">
 </div>
 </aside>
