--- a/zawody/luczarz.html
+++ b/zawody/luczarz.html
@@ -13,9 +13,9 @@
     <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="łuki">łuki</button>
-            <button class="button" data-category="kusze">kusze</button>
-            <button class="button" data-category="specjalne">Specjalne</button>
+            <button class="button" data-category="Łuki">Łuki</button>
+            <button class="button" data-category="Kusze">Kusze</button>
+            <button class="button" data-category="Inne">Inne</button>
         </div>
         <div class="styled-wrapper">
 		<aside id="side-filters">
