--- a/zawody/platnerz.html
+++ b/zawody/platnerz.html
@@ -12,10 +12,10 @@
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Zbroje">Zbroje</button>
+            <button class="button" data-category="Pancerz ciężki">Pancerz ciężki</button>
             <button class="button" data-category="Hełmy">Hełmy</button>
 			<button class="button" data-category="Tarcze">Tarcze</button>
-            <button class="button" data-category="specjalne">Specjalne</button>
+            <button class="button" data-category="Inne">Inne</button>
         </div>
         <div class="styled-wrapper">
     <button class="buttonq" onclick="window.location.href='../index.html'">
@@ -92,21 +92,7 @@
       <button class="filter-button" data-stat="BOTH">BOTH</button>
     </div>
 
-    <div class="filter-section">
-      <span class="filter-label">Obrona:</span>
-      <button class="filter-button" data-dmg="CUT">✂️</button>
-      <button class="filter-button" data-dmg="PRC">🗡️</button>
-      <button class="filter-button" data-dmg="BLT">🔨</button>
-      <button class="filter-button" data-dmg="MAG">🔮</button>
-      <button class="filter-button" data-dmg="BES">🐺</button>
-      <button class="filter-button" data-dmg="MIX">🧩</button>
-    </div>
-
-    <div class="filter-section">
-      <span class="filter-label">Visual:</span>
-      <button class="filter-button" data-visual="LIGHT">Skóra</button>
-      <button class="filter-button" data-visual="HEAVY">Blacha</button>
-    </div>
+    
 
     <input type="text" id="search-bar" placeholder="🔍 Szukaj..." />
   </div>
