--- a/zawody/ubrania.html
+++ b/zawody/ubrania.html
@@ -12,11 +12,8 @@
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
             <button class="button" data-category="Stroje">Stroje</button>
-            <button class="button" data-category="Pancerze">Pancerze?</button>
-			<button class="button" data-category="Chusty">Chusty</button>
-			<button class="button" data-category="Maski">Maski</button>
-			<button class="button" data-category="Czapki">Czapki</button>
-            <button class="button" data-category="specjalne">Specjalne</button>
+            <button class="button" data-category="Szaty">Szaty</button>
+            <button class="button" data-category="Inne">Inne</button>
         </div>
 		
 		<!--TODO
@@ -37,6 +34,8 @@
     <button class="filter-button" data-tier="T3">III</button>
     <button class="filter-button" data-tier="T4">IV</button>
     <button class="filter-button" data-tier="T5">V</button>
+	
+	
 
   <input type="text" id="search-bar" placeholder="🔍 Szukaj...">
 </div>
