--- a/zawody/zaklinacz.html
+++ b/zawody/zaklinacz.html
@@ -12,10 +12,11 @@
   <header>
         <div class="category-buttons">
             <button class="button" data-category="all">Wszystko</button>
-            <button class="button" data-category="Pieścienie">Pieścienie</button>
-            <button class="button" data-category="Naszyjniki">Naszyjniki</button>
-			<button class="button" data-category="Bransolety">Bransolety</button>
-            <button class="button" data-category="specjalne">Specjalne</button>
+            <button class="button" data-category="Runy">Runy</button>
+            <button class="button" data-category="Zwój">Zwój</button>
+			<button class="button" data-category="Kostur">Kostur</button>
+			<button class="button" data-category="Magiczne akcesoria">Magiczne akcesoria</button>
+            <button class="button" data-category="Inne">Inne</button>
         </div>
 		
 		<!--TODO
@@ -89,22 +90,7 @@
     </button>
 
 
-    <button class="buttonq" onclick="window.location.href='../zawody/gornik.html'">
-        <div class="buttonq-box">
-            <span class="buttonq-elem">
-               
-                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="arrow-icon" fill="white">
-                    <path d="M10 9V5l-7 7 7 7v-4h4c1.1 0 2 .9 2 2v3h2v-3c0-2.21-1.79-4-4-4h-4z"/>
-                </svg>
-            </span>
-            <span class="buttonq-elem">
-                
-                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="arrow-icon" fill="white">
-                     <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"></path>
-                </svg>
-            </span>
-        </div>
-    </button>
+
 </div>
     </header>
 <main>
