--- a/zawody/zbrojmistrz.html
+++ b/zawody/zbrojmistrz.html
@@ -16,8 +16,9 @@
             <button class="button" data-category="Rapiery">Rapiery</button>
 			<button class="button" data-category="Topory">Topory</button>
 			<button class="button" data-category="Obuchy">Obuchy</button>
-			<button class="button" data-category="Drzewcowe">Drzewcowe</button>
-            <button class="button" data-category="specjalne">Specjalne</button>
+			<button class="button" data-category="Sztylety">Sztylety</button>
+			<button class="button" data-category="Włócznie">Włócznie</button>
+            <button class="button" data-category="Inne">Inne</button>
         </div>
        <div class="styled-wrapper">
   <aside id="side-filters">
